--- a/Ejemplo_PreEntregaN2/package.json
+++ b/Ejemplo_PreEntregaN2/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "desafioentregable1",
+  "name": "ejemplo_segunda_pre_entrega",
   "version": "1.0.0",
-  "description": "Proyecto para el curso de Backend de Coderhouse",
+  "description": "ejemplo_segunda_pre_entrega_39700",
   "main": "app.js",
   "type": "module",
   "scripts": {
